--- a/templates/register.html
+++ b/templates/register.html
@@ -14,11 +14,32 @@
 
 <body>
     <form method="POST" action="">
-        
+        First Name <input type="text" name="first-name" />
+        <br>
+        Last Name <input type="text" name="last-name" />
+        <br>
         Email <input type="email" name="email" />
+        <br>
+        Mobile Number <input type="Number" name="number" pattern="^[1-9][0-9]{9}$"/>
         <br>
         Password <input type="password" name="password" />
         <br>
+        DoB <input type="date" name="dob" />
+        <br>
+        Gender
+        <select id="gender" name="gender">
+            <option value="female">Female</option>
+            <option value="male">Male</option>
+            <option value="other">Other</option>
+          </select>
+        <br>
+        AddressLine <input type="text" name="addressline" />
+        <br>
+        City <input type="text" name="city" />
+        <br>
+        PinCode <input type="text" name="pincode" pattern="^[1-9][0-9]{5}$">
+        <br>
+
         <input type="submit">
       </form>
 
