--- a/templates/addProduct.html
+++ b/templates/addProduct.html
@@ -20,12 +20,13 @@
         <br>
         Description <input type="textarea" name="description" />
         <br>
-        Availability <select id="availability" name="availability" >
-            <option value="Yes">Yes</option>
-            <option value="No">No</option>
-            <option value="other">Other</option>
-          </select>
-          <br>
+        Bank Name <input type="text" name="bank" />
+        <br>
+        Account No. <input type="number" name="Account" />
+        <br>
+        IFSC Code <input type="text" name="IFSC" />
+        <br>
+        
         is Merchandise <select id="Merch" name="Merch" onclick="displaynext()">
             <option value="Yes">Yes</option>
             <option value="No">No</option>
