--- a/templates/addProduct.html
+++ b/templates/addProduct.html
@@ -20,13 +20,8 @@
         <br>
         Description <input type="textarea" name="description" />
         <br>
-        Bank Name <input type="text" name="bank" />
+        Creation Date<input type="date" name="CreationDate" />
         <br>
-        Account No. <input type="number" name="Account" />
-        <br>
-        IFSC Code <input type="text" name="IFSC" />
-        <br>
-        
         is Merchandise <select id="Merch" name="Merch" onclick="displaynext()">
             <option value="Yes">Yes</option>
             <option value="No">No</option>
@@ -37,8 +32,7 @@
             <br>
             Quantity<input type="number" name="Quantity"/>
             <br>
-            Creation Date<input type="date" name=-"CreationDate" />
-            <br>
+            
           </div>
         
           <div id="No" style="display:none;" ><br/>
@@ -46,9 +40,45 @@
             <br>
             is Barter<input type="radio" id = "YesBarter" name="isBarter" value ="Yes" >Yes
             <input type="radio" id="NoBarter" name="isBarter" value ="No" >No
-            <br>
-            Creation Date<input type="date" name=-"CreationDate" />
             <br>        
+          </div>
+
+          <div id="categ">
+            <br>
+	
+            Category<select id="cat" name="cat" >
+              <option value="Clothing and Accessories">Clothing and Accessories</option>
+              <option value="Automotive Accessories">Automotive Accessories</option>
+              <option value="Food Products">Food Products</option>
+              <option value="Books">Books</option>
+              <option value="Industrial & Scientific Supplies">Industrial & Scientific Supplies</option>
+              <option value="Health Care">Health Care</option>
+              <option value="Home Improvement">Home Improvement</option>
+              <option value="Building Materials and Supplies">Building Materials and Supplies</option>
+              <option value="Beauty and Grooming">Beauty and Grooming</option>
+              <option value="Mobiles & Accessories">Mobiles & Accessories</option>
+              <option value="Computers">Computers</option>
+              <option value="Cameras & Accessories">Cameras & Accessories</option>
+              <option value="Gaming">Gaming</option>
+              <option value="Home Entertainment">Home Entertainment</option>
+              <option value="Home & Kitchen">Home & Kitchen</option>
+              <option value="Pens & Stationery">Pens & Stationery</option>
+              <option value="Bags, Wallets & Belts">Bags, Wallets & Belts</option>
+              <option value="Home Lighting">Home Lighting</option>
+              <option value="Kitchen, Cookware & Serveware">Kitchen, Cookware & Serveware</option>
+              <option value="Jewellery">Jewellery</option>
+              <option value="Home Cleaning & Bathroom Accessories">Home Cleaning & Bathroom Accessories</option>
+              <option value="Audio & Video">Audio & Video</option>
+              <option value="Eyewear">Eyewear</option>
+              <option value="Vas">Vas</option>
+              <option value="Pet Supplies">Pet Supplies</option>
+              <option value="Home Furnishing">Home Furnishing</option>
+              <option value="Sports">Sports</option>
+            </select>
+            <br>
+            <br>
+            Sub Category<input type="text" name="scat" />
+            <br>
           </div>
 
         <input type="submit">
