--- a/templates/login.html
+++ b/templates/login.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Login Form Design</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-        integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="static/css/style.css">
+    <title>Login</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="/static/css/login.css">
+    <!-- Remix Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
-    <form method="POST" action="">
-        
-        Email <input type="email" name="email" />
-        <br>
-        Password <input type="password" name="password" />
-        <br>
-        <input type="submit">
-      </form>
+    <div class="card">
+        <div class="side_img">
+            <img src="/static/image/campus.jpeg" alt="img" class="img">
+        </div>
+        <div class="side_img">
+            <form method="POST" action="#" class="take_input active" id="login">
+                
+                <h2>Login</h2>
+                <label for="email">Email Address</label>
+                <div class="email_add" onclick="activeInput(this)">
+                    <input type="email" name="email" class="email" id="emailInput" placeholder="abc@iitgn.ac.in">
+                </div>
+                <label for="password">Password</label>
+                <div class="email_add" onclick="activeInput(this)">
+                    <input type="password" class="password" name="password" id="password" placeholder="************">
+                   
+                </div>
+                
+                <button type="submit" class="btn btn-login"><a href="index.html"></a>Login</a></button>
+                <p>Don't have an account? <a href="/register" id="changeToRegister">Sign up</a></p>
+                <p class="or"></p>
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <div class="alert alert-danger" role="alert">
+                            {% for message in messages %}
+                                {{ message }}<br>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endwith %}
+                
+            </form>
+            
+        </div>
+    </div>
+    
 
 </body>
 
