css sync with flask

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
 
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="/static/css/signup.css">
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
 <body>
     <div class="card">
         <div class="side_img">
-            <img src="iitgn_campus.jpeg" alt="img" class="img">
+            <img src="/static/image/campus.jpeg" alt="img" class="img">
         </div>
         <div class="side_img">
              
