--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
     <!-- Remix Icons -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
@@ -34,7 +34,7 @@
                 <button type="submit" class="btn btn-login"><a href="index.html"></a>Login</a></button>
                 <p>Don't have an account? <a href="/register" id="changeToRegister">Sign up</a></p>
                 <p class="or"></p>
-                {% with messages = get_flashed_messages() %}
+                <!-- {% with messages = get_flashed_messages() %}
                     {% if messages %}
                         <div class="alert alert-danger" role="alert">
                             {% for message in messages %}
@@ -42,7 +42,7 @@
                             {% endfor %}
                         </div>
                     {% endif %}
-                {% endwith %}
+                {% endwith %} -->
                 
             </form>
             
