add logout logic

--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 <body>
     <div class="card">
         <div class="side_img">
-            <img src="/static/image/campus.jpeg" alt="img" class="img">
+            <img src="static/image/campus.jpeg" alt="img" class="img">
         </div>
         <div class="side_img">
             <form method="POST" action="#" class="take_input active" id="login">
