add: logout and generate unique uuid

--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
                     <a href="{{ url_for('product') }}">Add Product</a>
                     <a href="{{ url_for('myproducts') }}">My Product</a>
                     <a href="#">My order</a>
-                    <a href="{{ url_for('login') }}">log Out</a>               
+                    <a href="/logout">log Out</a>               
                 </div>
             
             </div>
