--- a/templates/edit_products_vp.html
+++ b/templates/edit_products_vp.html
@@ -33,7 +33,7 @@
         <div id="categ">
           <br>
 
-        Category<select id="cat" name="cat" >
+        <!-- Category<select id="cat" name="cat" >
             {% for j in catlist %}
               <OPTION value={{j[0]}}>{{j[1]}}</OPTION>
             {% endfor %}
@@ -45,7 +45,7 @@
               <OPTION value={{j[0]}}>{{j[1]}}</OPTION>
             {% endfor %}
           </select>
-          <br>
+          <br> -->
         </div>
 
         <input type="submit">
