--- a/static/css/login.css
+++ b/static/css/login.css
@@ -169,7 +169,9 @@ a:hover {
     color: #07139C;
 }
 
-
+  #emailError{
+    color:red
+  }
 
 @media screen and (max-width: 810px){
     body {
@@ -234,5 +236,11 @@ a:hover {
         content: '';
         padding: 0;
         margin: 0;
+    }
+    .error {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        margin-top: 5px;
     }
 }
