session time one day

--- a/templates/myproducts.html
+++ b/templates/myproducts.html
@@ -113,7 +113,7 @@
     <a>{{j['ProductName']}}</a>
     <script id = "data" type = "application/json">{{ j['ProductID']|tojson}}</script>
     <form method="post" action="">
-      <button>Edit</button>
+      <button><a href="/vp_products" id="changeToRegister">Edit</a></button>
     </form>
     <button onclick="del_Function_vp()">Delete</button>
     <br>
