--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,8 @@
                     <a href="{{ url_for('product') }}">Add Product</a>
                     <a href="{{ url_for('myproducts') }}">My Product</a>
                     <a href="#">My order</a>
-                    <a href="/logout">log Out</a>               
+                    <a href="/logout">log Out</a>
+                    <a href="/payment">Pay</a>              
                 </div>
             
             </div>
