--- a/templates/cart.html
+++ b/templates/cart.html
@@ -19,7 +19,7 @@
 
 <script src="https://kit.fontawesome.com/60fedd8558.js" crossorigin="anonymous"></script>    
 <title>Shopping Cart</title>
-<link rel="stylesheet" href="cart.css">
+<link rel="stylesheet" href="/static/css/cart.css">
   </head>
 
 <body>
@@ -254,8 +254,8 @@
               </div>
               <br>
               <div style="display: flex;justify-content: center;">
-                <button class="buy_now"><a href="index.html" class="ahref">Home</a></button>
-                <button class="buy_now"><a href="payment.html"></a>Pay now</a></button>
+                <button class="buy_now"><a href="/" class="ahref">Home</a></button>
+                <button class="buy_now"><a href="/payment"></a>Pay now</a></button>
               </div>
             </div> 
           </div>
