fetch detail from shopping cart

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
         <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
         <li id="a3"><a href="barter.html">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
-        <li id="a3"><a href="cart.html"><img src="/static/image/cart.png" alt=""></a></li>
+        <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt=""></a></li>
         <li id="a3">
             <div class="profile_dropdown">
                 <button class="profile"><img src="/static/image/user.png" alt=""></button>
