--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
             <div class="profile_dropdown">
                 <button class="profile"><img src="/static/image/user.png" alt=""></button>
                 <div class="profile-content">
-                    <a href="#">Edit Profile</a>
+                    <a href="/read_user">Edit Profile</a>
                     <a href="{{ url_for('product') }}">Add Product</a>
                     <a href="{{ url_for('myproducts') }}">My Product</a>
                     <a href="#">My order</a>
