--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,88 +1,76 @@
-* {
-    padding: 0;
+*
+{
     margin: 0;
+    padding: 0;
 }
 
-html {
+/*Navigation Bar*/
+html{
     height: 100%;
     width: 100%;
 }
-
-@keyframes ex {
-    0% {
+@keyframes ex{
+    0%{ 
         margin-top: 400px;
     }
-
-    100% {
+    100%{
         margin-top: 0;
     }
 }
-
 .navbar {
     padding: 8px;
     background-color: whitesmoke;
-    height: 2.8rem;
+    height: 2.5rem;
     max-width: 100%;
     box-shadow: 0 0 8px 0 grey;
-    position: -webkit-sticky;
-    /* Safari */
+    position: -webkit-sticky; 
     position: sticky;
-    top: 0;
+    justify-content: space-between;
+    top:0;
     animation: ex;
     animation-duration: 0.5s;
-
 }
-
-.navbar ul {
-    left: 1%;
+.navbar ul{
+    left:1%;
     display: flex;
-    width: 100%;
+    width:100%;
     list-style: none;
     flex-wrap: nowrap;
     font-family: 'Dongle', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     max-height: 100%;
     justify-content: space-between;
+    text-align: center;
+  
 }
-
-.navbar li {
-    margin-top: 0.16em;
+.navbar li{
+    margin-top: 0.22em;
 }
-
-.navbar a {
+.navbar a{
     text-decoration: none;
     color: black;
 }
-
-#a1 {
+#a1{
     margin-left: 1%;
     color: black;
 }
-
-#a2 {
-    margin-left: 30%;
+#a2{
+    margin-left:15%;
 }
-
-.navbar a:hover {
+.navbar a:hover{
     color: #646262;
 }
-
-.navbar form {
+.navbar form{
     top: 0;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: nwrap;
 }
 
-.search {
-    width: 500px;
-    display: flex;
-}
-
-.search-box {
-    top: 10%;
+.search-box{
+  
     width: 100%;
     height: 17px;
-    padding: 10px;
+    padding: 1px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border: none;
@@ -92,10 +80,10 @@ html {
     outline: none;
 }
 
-#search-btn {
-    top: 10%;
+#search-btn{
+  
     width: 20%;
-    height: 17 px;
+    height: 17%;
     padding: 5px;
     border: none;
     outline: none;
@@ -108,26 +96,34 @@ html {
     border-bottom-right-radius: 10px;
 }
 
-#a3 button {
-    border: none;
-    background: none;
+
+
+
+
+#a3 button{
+    border:none;
+    background:none;
     cursor: pointer;
 }
-
-.search-box::placeholder {
+.search-box::placeholder{
     color: #a9a9a9;
 }
-
-#login {
+#login{
     display: none;
     width: 60%;
     border: 2px solid;
 }
-
+.login_karo
+{
+    position: relative;
+	transition: all 5s ease-in-out;
+    width: 30%;
+}
 
 /*Profile dropdown*/
 
-.profile {
+.profile
+{
     color: #000;
     padding: 10px;
     font-size: 25px;
@@ -135,27 +131,31 @@ html {
     font-family: 'Dongle', sans-serif;
 }
 
-.profile:hover {
+.profile:hover
+{
     color: #646262;
 }
 
-.profile_dropdown {
+.profile_dropdown 
+{
     position: relative;
     display: flexbox;
-
+   
 }
 
-.profile-content {
+.profile-content 
+{
     display: none;
     position: absolute;
     background-color: #fff;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     right: 30%;
 }
-
-.profile-content a {
+  
+.profile-content a 
+{
     color: black;
     padding: 12px 16px;
     text-decoration: none;
@@ -166,7 +166,8 @@ html {
     background-color: #ddd;
 }
 
-.profile_dropdown:hover .profile-content {
+.profile_dropdown:hover .profile-content 
+{
     display: block;
 }
 
@@ -182,135 +183,7 @@ body {
     background: #fbf3ff;
 }
 
-.container {
-    position: absolute;
-    max-width: 800px;
-    height: 500px;
-    margin: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
 
-.myRightCtn {
-    position: relative;
-    background-image: linear-gradient(45deg, #f046ff, #9b00e8);
-    border-radius: 25px;
-    height: 100%;
-    padding: 25px;
-    color: rgb(192, 192, 192);
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.myLeftCtn {
-    position: relative;
-    background: #fff;
-    border-radius: 25px;
-    height: 100%;
-    padding: 25px;
-    padding-left: 50px;
-}
-
-.myLeftCtn header {
-    color: blueviolet;
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 20px;
-}
-
-.row {
-    height: 100%;
-}
-
-.myCard {
-    position: relative;
-    background: #fff;
-    height: 100%;
-    border-radius: 25px;
-    -webkit-box-shadow: 0px 10px 40px -10px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 0px 10px 40px -10px rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 10px 40px -10px rgba(0, 0, 0, 0.7);
-}
-
-.myRightCtn header {
-    color: #fff;
-    font-size: 44px;
-}
-
-.box {
-    position: relative;
-    margin: 20px;
-    margin-bottom: 100px;
-}
-
-.myLeftCtn .myInput {
-    width: 230px;
-    border-radius: 25px;
-    padding: 10px;
-    padding-left: 50px;
-    border: none;
-    -webkit-box-shadow: 0px 10px 49px -14px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 0px 10px 49px -14px rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 10px 49px -14px rgba(0, 0, 0, 0.7);
-}
-
-.myLeftCtn .myInput:focus {
-    outline: none;
-}
-
-.myForm {
-    position: relative;
-    margin-top: 50px;
-}
-
-.myLeftCtn .butt {
-    background: linear-gradient(45deg, #bb36fd, #9b00e8);
-    color: #fff;
-    width: 230px;
-    border: none;
-    border-radius: 25px;
-    padding: 10px;
-    -webkit-box-shadow: 0px 10px 41px -11px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 0px 10px 41px -11px rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 10px 41px -11px rgba(0, 0, 0, 0.7);
-}
-
-.myLeftCtn .butt:hover {
-    background: linear-gradient(45deg, #c85bff, #b726ff);
-}
-
-.myLeftCtn .butt:focus {
-    outline: none;
-}
-
-.myLeftCtn .fas {
-    position: relative;
-    color: #bb36fd;
-    left: 36px;
-}
-
-.butt_out {
-    background: transparent;
-    color: #fff;
-    width: 120px;
-    border: 2px solid#fff;
-    border-radius: 25px;
-    padding: 10px;
-    -webkit-box-shadow: 0px 10px 49px -14px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 0px 10px 49px -14px rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 10px 49px -14px rgba(0, 0, 0, 0.7);
-}
-
-.butt_out:hover {
-    border: 2px solid#eecbff;
-}
-
-.butt_out:focus {
-    outline: none;
-}
 
 
 
@@ -337,17 +210,8 @@ select {
     box-sizing: border-box;
 }
 
-/* Style the textarea field */
-input[type="textarea"] {
-    width: 100%;
-    height: 150px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
+
+
 
 /* Style the submit button */
 input[type="submit"] {
@@ -368,10 +232,7 @@ input[type="submit"] {
     }
 }
 
-.card {
-    margin-top: 10px;
-    margin-bottom: 30%;
-}
+
 
 .btns {
     padding: 12px;
@@ -413,4 +274,10 @@ input[type="submit"] {
 
     padding: 20px;
     width: 100%;
+}
+.card
+{
+    margin-top: 20px;
+   
+    
 }
