--- a/templates/cart.html
+++ b/templates/cart.html
@@ -91,7 +91,15 @@
       <div style="margin:20px 20px;" class="row">
         <div style="padding:20px 30px;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;margin-right: 20px;margin-left: 35px;width: 58% !important;" class="col-md-7 box-sz">
           <h3 class="mid1-sz" style="font-weight: 450!important;padding: 0px!important">Shopping Cart</h3>
-          
+          {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <div class="alert alert-danger" role="alert">
+                    {% for message in messages %}
+                        <span style="color: red;">{{ message }}</span><br>
+                    {% endfor %}
+                </div>
+                {% endif %}
+            {% endwith %}
           {% for item in data %}
           <div class="box1-sz" style="margin-top: 15px;padding: 15px 0px;border-top:1.5px solid #E2E5DE">
             <div class="row">
@@ -109,7 +117,8 @@
                 <br>
                 <div style="display:flex;justify-content: flex-start;">
                  
-                    <button class="buy_now">Remove</button>    
+                    <button type="submit" class="buy_now"><a href="{{url_for("delete_shopping_cart", product_id=item['ProductID'])}}" id="delete_from_cart">Remove</a></button>
+                    <button class="buy_now"><a href="{{url_for("pay", price=item['Price'])}}" id="delete_from_cart">Buy Now</a></button> 
                 </div>
               </div>
               <div style="padding:10px 0px;width: 17% !important;" class="col-md-2">
