--- a/templates/bid_buyer.html
+++ b/templates/bid_buyer.html
@@ -25,7 +25,7 @@
         </form>
         </li>
         <li id="a3"><a href="index.html">Bid</a></li>
-        <li id="a3"><a href="barter.html">Barter</a></li>
+        <li id="a3"><a href="barterproduct.html">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
         <li id="a3"><a href="cart.html"><img src="cart.png" alt=""></a></li>
         <li id="a3">
