--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
         </form>
         </li>
         <li id="a3"><a href="{{ url_for('index') }}">Bid</a></li>
-        <li id="a3"><a href="barter.html">Barter</a></li>
+        <li id="a3"><a href="{{ url_for('Barter') }}">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
         <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt=""></a></li>
         <li id="a3">
