--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,7 +30,7 @@
           </li>
           <li><a href="index.html">Home</a></li>
           <li id="a3"><a href="#">Bid</a></li>
-          <li id="a3"><a href="#">Barter</a></li>
+          <li id="a3"><a href="barterproduct.html">Barter</a></li>
           <li id="a3"><a href="#">Merchandise</a></li>
           <li id="a3"><a href="#"><img src="cart.png" alt=""></a></li>
           <li id="a3">
