--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
               
               </li>
               <li id="a3"><a href="/index">Bid</a></li>
-              <li id="a3"><a href="barter.html">Barter</a></li>
+              <li id="a3"><a href="barterproduct.html">Barter</a></li>
               <li id="a3"><a href="merchandise.html">Merchandise</a></li>
               <li id="a3"><a href="/index/shopping_cart"><img src="/static/image/cart.png" alt=""></a></li>
               <li id="a3">
