--- a/templates/Barter.html
+++ b/templates/Barter.html
@@ -30,7 +30,7 @@
       </li>
       
       <li id="a3"><a href="index.html">Bid</a></li>
-        <li id="a3"><a href="barter.html">Barter</a></li>
+        <li id="a3"><a href="barterproduct.html">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
         <li id="a3"><a href="cart.html"><img src="cart.png" alt=""></a></li>
         <li id="a3">
@@ -336,7 +336,7 @@
             {name: 'Blithchron Hoodie', price: 'Rs.800', imageUrl: 'hoodie.jpg'},
             {name: 'Blithchron Hoodie', price: 'Rs.800', imageUrl: 'hoodie.jpg'},
             {name: 'Blithchron Hoodie', price: 'Rs.800', imageUrl: 'hoodie.jpg'},
-            {name: 'Blithchron Hoodie', price: 'Rs.800', imageUrl: 'hoodie.jpg'}
+            {name: 'Blithchron Hoodie', price: 'Rs.100', imageUrl: 'hoodie.jpg'}
         ];
     
         createProductCards(products);
