--- a/templates/barterpage.html
+++ b/templates/barterpage.html
@@ -27,7 +27,7 @@
         <li id="a2"></li>
         <li id="a2"></li>
         <li id="a3"><a href="index.html">Bid</a></li>
-        <li id="a3"><a href="barter.html">Barter</a></li>
+        <li id="a3"><a href="barterproduct.html">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
         <li id="a3"><a href="cart.html"><img src="cart.png" alt=""></a></li>
         <li id="a3">
