--- a/templates/barterproduct.html
+++ b/templates/barterproduct.html
@@ -1,6 +1,6 @@
 <head>
-    <link rel="stylesheet" href="barterproduct.css">
-    <link rel="stylesheet" href="barterproduct.js">
+    <link rel="stylesheet" href="/static/css/barterproduct.css">
+    <link rel="stylesheet" href="/static/js/barterproduct.js">
 </head>
 
 <!--Navigation Bar-->
@@ -25,12 +25,12 @@
         </form>
         </li>
         <li id="a3"><a href="index.html">Bid</a></li>
-        <li id="a3"><a href="barter.html">Barter</a></li>
+        <li id="a3"><a href="barterproduct.html">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
-        <li id="a3"><a href="cart.html"><img src="cart.png" alt=""></a></li>
+        <li id="a3"><a href="cart.html"><img src="/static/image/cart.png" alt=""></a></li>
         <li id="a3">
             <div class="profile_dropdown">
-                <button class="profile"><img src="user.png" alt=""></button>
+                <button class="profile"><img src="/static/image/user.png" alt=""></button>
                 <div class="profile-content">
                     <a href="#">Edit Profile</a>
                     <a href="addproduct.html">Add Product</a>
@@ -50,6 +50,7 @@
 
 
   <!--Product Details-->
+{% for i in brtlist %}
 <div class="product-image">
     <section>
         <div class="card">
@@ -59,15 +60,15 @@
         </div>
     </section>
     <section>
-        <h1>Blithchron Hoodie</h1><br>
-        <span class="price">Rs.800</span><br>
+        <h1>{{i['ProductName']}}</h1><br>
+        <span class="price">Rs.{{i['BasePrice']}}</span><br>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star"></span>
        <br>
-        <p class="details">Dark Blue Colored Blithchron Hoodie with Blithchron Logo.</p>
+        <p class="details">{{i['Description_']}}</p>
         
         
         
@@ -76,3 +77,8 @@
         <button class="btns" onclick="barterpage()">Barter</button>
     </section>
 </div>
+{% endfor %}
+
+<body>
+    BARTER
+</body>
