--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -94,7 +94,7 @@
         </form>
         </li>
         <li id="a3"><a href="index.html">Bid</a></li>
-        <li id="a3"><a href="barter.html">Barter</a></li>
+        <li id="a3"><a href="barterproduct.html">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
         <li id="a3"><a href="cart.html"><img src="cart.png" alt=""></a></li>
         <li id="a3">
