--- a/templates/barterpage.html
+++ b/templates/barterpage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="addproduct.css">
+    <link rel="stylesheet" href="/static/css/addproduct.css">
     
 </head>
 
@@ -17,7 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dongle&family=Ubuntu&display=swap" rel="stylesheet">
-  <script src="merchandise.js"></script>
+  <script src="/static/js/merchandise.js"></script>
 
   <header>
     <nav class="navbar">
@@ -29,10 +29,10 @@
         <li id="a3"><a href="index.html">Bid</a></li>
         <li id="a3"><a href="barterproduct.html">Barter</a></li>
         <li id="a3"><a href="merchandise.html">Merchandise</a></li>
-        <li id="a3"><a href="cart.html"><img src="cart.png" alt=""></a></li>
+        <li id="a3"><a href="cart.html"><img src="/static/image/cart.png" alt=""></a></li>
         <li id="a3">
               <div class="profile_dropdown">
-                  <button class="profile"><img src="user.png" alt=""></button>
+                  <button class="profile"><img src="/static/image/user.png" alt=""></button>
                   <div class="profile-content">
                       <a href="#">Edit Profile</a>
                       <a href="addProduct.html">Add Product</a>
@@ -66,7 +66,7 @@
         <input type="submit">
           </div>
       </form>
-      <script src="pdt_form.js"></script>
+      <script src="/static/js/pdt_form.js"></script>
 
 </body>
 </html>
