--- a/templates/barterproduct.html
+++ b/templates/barterproduct.html
@@ -74,7 +74,7 @@
         
         <br>
         
-        <button class="btns" onclick="barterpage()">Barter</button>
+        <a href={{url_for('barterpage', id=i['ProductID'])}}>Barter</a>
     </section>
 </div>
 {% endfor %}
